This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

30-Aug-2004 (Lars Duening)  (3.3.590)
  - (prolang.y) The move of the PREPARE_INSERT() in the last patch caused
      the driver to generate faulty bytecode.
  - (prolang.y) Function definitions didn't count the reference for the
      returntype, which lead to memory corruption/crashes when handling
      struct returntypes. Unfortunately now we have a memory leak
      when structs are used as returntypes - there is something to be said for
      using C++...  (reported by Bardioc).

23-Aug-2004 (Lars Duening)  (3.3.589)
  - (prolang.y) Removed a C99 construct which broke compilation on C90
      compilers. I hope. (Bug #0000116).

23-Aug-2004 (Lars Duening)  (3.3.588)
  - (array.c, pkg-mccp.c) Removed compiler warnings (thanks, Andre).

22-Aug-2004 (Lars Duening)  (3.3.587)
  - (interpret.c) Calls from destructed objects to other objects
       (including simul-efun calls) now elicit a warning (Bug #0000113).
  - (configure, config.h, mregex, pkg-pcre, main.c) The driver now tries
       to use the system's PCRE library if available, while offering an
       override to use the builtin package regardless.

21-Aug-2004 (Lars Duening)  (3.3.586)
  - (interpret.c) If a lambda was executed inside a catch() and threw an
       error, the error routines didn't clean up the protective reference
       held in current_lambda (Bug #0000114).
  - (efuns.c) to_string(closure) leaked the closure (Bug #0000114).
  - (ed.c) The 'M' command leaked the regular expression (Bug #0000114).

19-Aug-2004 (Lars Duening)  (3.3.585)
  - (prolang.y, interpret.c, func_spec) Float variables without initializer
       are now properly initialized to float-0 instead of number-0 (reported
       by Bardioc).
  - (pkg-mccp.c) When ending a MCCP connection failed due to an error, the